--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,7 @@
     "php": ">=5.5",
     "guzzlehttp/guzzle": "^5.3",
     "slim/slim": "^3.0",
-    "monolog/monolog": "^1.19.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "LINE\\": "sdk/"
-    }
+    "monolog/monolog": "^1.19.0",
+    "linecorp/line-bot-sdk":">=0.0"
   }
 }
